@startuml

entity "users" as users {
  + id [PK]
  --
  name
  email
  password
  birthdate
  gender
  profession
  profile
  profile_image
  skill
  rating
  is_consultant
}

entity "consultations" as consultations {
  + id [PK]
  --
  consultant_id [FK]
  requester_id [FK]
  --
  request_content
  answer_deadline
  request_status
  talk_room_status
  is_read
}

entity "messages" as messages {
  + id [PK]
  --
  sender_id [FK]
  consultations_id [FK]
  --
  content
  sent_at
  is_read
}

users ||--o{ consultations
consultations ||--o{ messages
users ||--o{ messages


@enduml 
